updated vignette (errors)

--- a/vignettes/TidyR.Rmd
+++ b/vignettes/TidyR.Rmd
@@ -9,11 +9,116 @@ vignette: >
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
+  fig.width = 7,
+  fig.height = 5,
+  fig.align = "center",
+  message = FALSE,
   collapse = TRUE,
   comment = "#>"
 )
 ```
 
-```{r setup}
+```{r setup, echo=FALSE}
 library(TidyR)
+```
+
+
+## Introduction
+
+__TidyR__ is an R package which tidies data, saves this tidied dataset and plots it. There are three functions provided:
+
+  Function 1 : The `tidy_data()` function makes column names the same and removes any NA values.
+  
+  Function 2: The `load_data()` function saves the processed dataset and makes available as part of this R package
+  
+  Function 3: The `plot.tidy_data()` function generates a plot for the inputted x vs y based on `ggplot2`.
+
+### Installation
+
+//////////////////////////////////////////////
+
+__TidyR__ will run in Windows, Mac OS X, or Linux. To install it you first need to install [R](https://cran.r-project.org/). Installing [RStudio](https://www.rstudio.com/) as a nice desktop environment for using R is also recommended.
+
+Once in R you can type at the R command prompt:
+
+```{r, eval=FALSE}
+#install.packages('devtools')
+#devtools::install_github('erinweadick/TidyR')
+```
+
+To install the latest development version of the package from the __TidyR__ [GitHub page](https://github.com/erinweadick/TidyR). 
+
+In either case, if you then type:
+
+```{r, eval=FALSE}
+library(TidyR)
+```
+
+it will load in all the aforementioned __TidyR__ functions.
+
+//////////////////////////////////////////////
+
+## Function 1 : tidy_data
+
+This function converts column names to a specified case style (e.g., snake_case, UpperCamelCase).
+It removes rows with NA values.
+It ensures compatibility with other functions in the package.
+
+```{r}
+tidy_data <- function(data, case = "snake") {
+
+  if (!is.data.frame(data)) {
+    stop("Input must be a data frame")
+  }
+
+  tidied_data <- data %>%
+    na.omit(data) %>%
+    clean_names(case = case)
+
+  return(tidied_data)
+}
+
+cleaned_Data <-tidy_data(data, "snake")
+devtools::check()
+```
+
+
+## Function 2: load_data
+
+This function saves the processed dataset as an R object, allowing it to be used seamlessly within the package. It is saved using the 'usethis :: use_data' function.
+```{r}
+load_data <- function(data){
+  usethis::use_data(data, compress="xz",overwrite = TRUE)
+}
+
+load_data(cleaned_Data)
+```
+
+
+## Function 3: plot.tidy_data
+
+This function generates scatter plots using ggplot2. It produces a dashed, red linear regression line, allowing users to visualize relationships between two variables in the tidied dataset. The points of the scatterplot are a 'steelblue' colour.
+
+
+```{r}
+plot.tidy_data <- function(object, x, y, ...) {
+  if (missing(x) || missing(y)) {
+    stop("You must specify both x and y for the plot.")
+  }
+```
+
+
+```{r}
+ggplot(object, aes(x = .data[[x]], y = .data[[y]])) +
+    geom_point(color = "steelblue", size = 3, alpha = 0.8) +
+    geom_smooth(method = "lm", color = "darkred", se = FALSE, linetype = "dashed", linewidth = 1) +
+    theme_minimal(base_size = 14) +
+    theme(
+      plot.title = element_text(hjust = 0.5, face = "bold", color = "darkblue", size = 16),
+      panel.grid.major = element_line(color = "lightgray", linetype = "dotted"),
+      panel.grid.minor = element_blank()
+    )
+}
+
+plot.tidy_data(cleaned_Data, "spad", "chlorophyll")
 ```
